// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > snapshot: disabled 1`] = `
<select
  class="ucl-uikit-select css-1k92o15"
  data-testid="ucl-uikit-select"
  disabled=""
>
  <option>
    Option 1
  </option>
  <option>
    Option 2
  </option>
  <option>
    Option 3
  </option>
  <option>
    Option 4
  </option>
</select>
`;

exports[`Select > snapshot: no props 1`] = `
<select
  class="ucl-uikit-select css-mbwdbz"
  data-testid="ucl-uikit-select"
>
  <option>
    Option 1
  </option>
  <option>
    Option 2
  </option>
  <option>
    Option 3
  </option>
  <option>
    Option 4
  </option>
</select>
`;
